updated scripts